--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="app">
+        <h4>To Do App</h4>
+        <div id="addNew">
+            <span>Add New Task</span>
+            <i class="fa-solid fa-plus"></i>
+        </div>
+        <h5>Tasks</h5>
 
     </div>
+
+    <script src="main.js"></script>
     
 </body>
 </html>
