--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <p>Working out</p>
 
                 <span class="options">
-                    <i class="fa-solid fa-pen-to-square"></i>
-                    <i class="fa-solid fa-trash"></i>
+                    <i onClick = "editTask(this)" data-bs-toggle="modal" data-bs-target="#form" class="fa-solid fa-pen-to-square"></i>
+                    <i onClick = "deleteTask(this)" class="fa-solid fa-trash"></i>
                 </span>
             </div>
 
@@ -67,8 +67,8 @@
                 <p>Working out</p>
 
                 <span class="options">
-                    <i class="fa-solid fa-pen-to-square"></i>
-                    <i class="fa-solid fa-trash"></i>
+                    <i onClick = "editTask(this)" data-bs-toggle="modal" data-bs-target="#form" class="fa-solid fa-pen-to-square"></i>
+                    <i onClick = "deleteTask(this)" class="fa-solid fa-trash"></i>
                 </span>
             </div>
 
